Add more sections